Modif index.html

--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
   </style>
 </head>
 <body>
-  <h1>Recherche Google Sheet</h1>
-  <div class="filter">
-    <label for="search">Recherche:</label>
-    <input type="text" id="search" oninput="filterData()">
-  </div>
+  <h1>Recherche Doublons Topps</h1>
   <div class="filter">
     <label for="numCase">Num case:</label>
     <input type="text" id="numCase" oninput="filterData()">
