--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
   <script>
     let data = [];
 
-    // Utilisation de l'URL de votre déploiement Apps Script
     const API_URL = 'https://script.google.com/macros/s/AKfycbyXSCbI2hq_1mbn6czvzRJtKcFl-mAEXbA1P2pJfuP8ftOY1gRKJZlLnNJydNJPG0WF/exec';
 
     fetch(API_URL)
@@ -120,7 +119,7 @@
       const rarete = document.getElementById('rarete').value.toLowerCase();
 
       const filteredData = data.filter(row => {
-        const matchesNumCase = !numCase || row.numCase.toString().toLowerCase().includes(numCase);
+        const matchesNumCase = !numCase || row.numCase.toLowerCase().includes(numCase);
         const matchesType = !type || row.type.toLowerCase().includes(type);
         const matchesPays = !pays || row.pays.toLowerCase().includes(pays);
         const matchesRarete = !rarete || row.rarete.toLowerCase().includes(rarete);
