--- a/index.html
+++ b/index.html
@@ -4,57 +4,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Recherche Google Sheet</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    .filter {
-      margin-bottom: 10px;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
-    }
-    th {
-      background-color: #f2f2f2;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1>Recherche Google Sheet</h1>
-  <div class="filter">
-    <label for="numCase">Num case:</label>
-    <input type="text" id="numCase">
-  </div>
-  <div class="filter">
-    <label for="type">Type:</label>
-    <input type="text" id="type">
-  </div>
-  <div class="filter">
-    <label for="pays">Pays:</label>
-    <input type="text" id="pays">
-  </div>
-  <div class="filter">
-    <label for="rarete">Rareté:</label>
-    <select id="rarete">
-      <option value="">Tous</option>
-      <option value="Argent">Argent</option>
-      <option value="Point">Point</option>
-      <option value="Epic">Epic</option>
-      <option value="Topps">Topps</option>
-      <option value="Vert">Vert</option>
-      <option value="Bleu">Bleu</option>
-      <option value="Demi">Demi</option>
-      <option value="Legende">Legende</option>
-      <option value="PTW">PTW</option>
-      <option value="SP">SP</option>
-    </select>
+  <div class="filter-container">
+    <div class="filter">
+      <label for="numCase">Num case:</label>
+      <input type="text" id="numCase">
+    </div>
+    <div class="filter">
+      <label for="type">Type:</label>
+      <input type="text" id="type">
+    </div>
+    <div class="filter">
+      <label for="pays">Pays:</label>
+      <input type="text" id="pays">
+    </div>
+    <div class="filter">
+      <label for="rarete">Rareté:</label>
+      <select id="rarete">
+        <option value="">Tous</option>
+        <option value="Argent">Argent</option>
+        <option value="Point">Point</option>
+        <option value="Epic">Epic</option>
+        <option value="Topps">Topps</option>
+        <option value="Vert">Vert</option>
+        <option value="Bleu">Bleu</option>
+        <option value="Demi">Demi</option>
+        <option value="Legende">Legende</option>
+        <option value="PTW">PTW</option>
+        <option value="SP">SP</option>
+      </select>
+    </div>
   </div>
   <button onclick="filterData()">Rechercher</button>
   <table id="data-table">
