--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recherche Google Sheet</title>
+  <title>Recherche Topps manquant</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Recherche Google Sheet</h1>
+  <h1>Recherche les sticker qu'il te manque</h1>
   <div class="filter-container">
     <div class="filter">
       <label for="numCase">Num case:</label>
