Patch version iphone et ordi

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       .then(response => response.json())
       .then(json => {
         data = json;
-        displayData(data);
+        displayData(json);
       });
 
     function displayData(data) {
